--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     #container {
       width: 1200px;
       height: 800px;
-      background-color: #D8CEF6;
+      background-color: green;
       margin: auto;
 
 
@@ -30,7 +30,7 @@
       width: 50%;
       height: 30%;
       padding: 30px;
-      background-color: #F6E3CE;
+      background-color: #F7FE2E;
       margin: auto;
 
 
@@ -41,7 +41,7 @@
 
       width: 50%;
       height: 20%;
-      background-color: #A9BCF5;
+      background-color: #8A0886;
       padding: 30px;
       margin-top: 30px;
       float: left;
